completed first revision of abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,15 +1,6 @@
 % 
-This article presents a seismic hazard assessment for northern Iran, using a smoothed seismicity approach in combination with an updated seismic catalog and a recently introduced ground motion prediction equation. In the assessment, we evaluate the hazard considering the contribution of the three major seismic zones affecting the northern part of the country, namely Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh. For completeness, we also consider the partial contribution of the two remaining seismic zones of Zagros and the central and eastern 
+This article presents a seismic hazard assessment for northern Iran where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a recently introduced ground motion prediction equation. We evaluate the hazard considering over a geographical region including the three major seismic zones affecting the northern part of the country, namely Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh, and for completeness, we also consider the partial contribution of the two remaining seismic zones, that is, Zagros to the south-west, and the central and eastern Iranian seismic zone. Following the concepts of smoothed seismicity, events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree in both the latitude and longitude directions. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events with magnitude greater than 3 within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Smoothing was done using a Gaussian filter in incremental intervals of magnitude. Seismicity parameters are calculated and smoothed for each region separately, and for comparison purposes, we also consider the combination of all the seismic zones as a uniform region. Seismic hazard curves are first obtained for two distinct models defined on two structural risk scenarios based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0, and then combined into a single one to account for the proportion of reinforced and unreinforced structures. The results are presented in terms of expected peak ground acceleration curves and hazard maps and considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions, and compared to equivalent estimations available in the literature at selected locations. Despite some localized differences \textcolor{red}{[???]}, we find our results to be in good agreement with previous results. Therefore, we find the method used here is appropriate to estimate seismic hazard for northern Iran. We conclude with an analysis of the results and its implications for the region, and highlight... or offer some additional thoughts about... \textcolor{red}{[Naeem: what would you say is the main conclusion or major finidng?]}.
 
+% Naeem's original abstract
 
-% Ricardo is working on this...
-
-,  and 
-
-recently introduced 
-
- We conduct an assessment of seismic hazard for northern Iran using 
-
-
-
-In this study we conduct a new probabilistic seismic hazard assessment for northern Iran, using recently confirmed ground motion prediction equations and updated seismic catalogs. We evaluate seismic hazard over whole three tectonic seismic zones (Alborz Mountain Range, Azerbaijan and Kopeh-Dagh) and part of two tectonic seismic zones (Zagros and Central-East Iran) using smoothed seismicity. In this model, events are not assigned to specific faults and are assumed to be potential seismogenic sources, spatially gridded to cells. We decluster historical and instrumental seismicity to compute the rate of earthquakes in each grid, and smooth these rates to account for uncertainty in the spatial distribution of future earthquakes. We assume each grid cell has spacing of $0.1^{\circ}$ in latitude and $0.1^{\circ}$ in longitude and count the number of earthquakes in each of them. We use Gaussian filter to smooth the fraction of earthquakes in incremental intervals of magnitude. For this article, in order to consider the seismicity rate, we consider all historical and instrumental earthquakes with magnitude above 3. To calculate the seismic hazard we defined two models based on structural damage threshold magnitude, including Mw 4.5 and Mw 5. Seismicity parameters are calculated for each seismic region, and smoothed seismicity is calculated separately for each. We also consider the combination of regions as a uniform region.  We add the probability of exceedance of all regions and present the smoothed seismicity hazard in northern Iran. The horizontal peak ground acceleration is selected as the ground motion parameter. The results are assessed in terms of the expected peak ground acceleration (PGA) with a 10\% and 2\% probability of exceedance in 50 years for rock site conditions. The seismic hazard map for northern Iran is presented. 
+% In this study we conduct a new probabilistic seismic hazard assessment for northern Iran, using recently confirmed ground motion prediction equations and updated seismic catalogs. We evaluate seismic hazard over whole three tectonic seismic zones (Alborz Mountain Range, Azerbaijan and Kopeh-Dagh) and part of two tectonic seismic zones (Zagros and Central-East Iran) using smoothed seismicity. In this model, events are not assigned to specific faults and are assumed to be potential seismogenic sources, spatially gridded to cells. We decluster historical and instrumental seismicity to compute the rate of earthquakes in each grid, and smooth these rates to account for uncertainty in the spatial distribution of future earthquakes. We assume each grid cell has spacing of $0.1^{\circ}$ in latitude and $0.1^{\circ}$ in longitude and count the number of earthquakes in each of them. We use Gaussian filter to smooth the fraction of earthquakes in incremental intervals of magnitude. For this article, in order to consider the seismicity rate, we consider all historical and instrumental earthquakes with magnitude above 3. To calculate the seismic hazard we defined two models based on structural damage threshold magnitude, including Mw 4.5 and Mw 5. Seismicity parameters are calculated for each seismic region, and smoothed seismicity is calculated separately for each. We also consider the combination of regions as a uniform region.  We add the probability of exceedance of all regions and present the smoothed seismicity hazard in northern Iran. The horizontal peak ground acceleration is selected as the ground motion parameter. The results are assessed in terms of the expected peak ground acceleration (PGA) with a 10\% and 2\% probability of exceedance in 50 years for rock site conditions. The seismic hazard map for northern Iran is presented. 
