--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 % 
-This article presents a seismic hazard assessment for northern Iran where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a recently introduced ground motion prediction equation. We evaluate the hazard considering over a geographical region including the three major seismic zones affecting the northern part of the country, namely Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh, and for completeness, we also consider the partial contribution of the two remaining seismic zones, that is, Zagros to the south-west, and the central and eastern Iranian seismic zone. Following the concepts of smoothed seismicity, events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree in both the latitude and longitude directions. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events with magnitude greater than 3 within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Smoothing was done using a Gaussian filter in incremental intervals of magnitude. Seismicity parameters are calculated and smoothed for each region separately, and for comparison purposes, we also consider the combination of all the seismic zones as a uniform region. Seismic hazard curves are first obtained for two distinct models defined on two structural risk scenarios based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0, and then combined into a single one to account for the proportion of reinforced and unreinforced structures. The results are presented in terms of expected peak ground acceleration curves and hazard maps and considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions, and compared to equivalent estimations available in the literature at selected locations. Despite some localized differences \textcolor{red}{[???]}, we find our results to be in good agreement with previous results. Therefore, we find the method used here is appropriate to estimate seismic hazard for northern Iran. We conclude with an analysis of the results and its implications for the region, and highlight... or offer some additional thoughts about... \textcolor{red}{[Naeem: what would you say is the main conclusion or major finidng?]}.
+This article presents a seismic hazard assessment for northern Iran where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a recently introduced ground motion prediction equation. We evaluate the hazard over a geographical region including the three major seismic zones affecting the northern part of the country, namely Azerbaijan to the northwest, the Alborz Mountain Range in the northern-central region of Iran, and Kopeh-Dagh to the northeast. For completeness, we also consider the partial contribution of the two remaining seismic zones to the south, that is, Zagros to the southwest, and the south-central and southeastern Iranian seismic zone. Following the concepts of smoothed seismicity, events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree in both the latitude and longitude directions. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events with magnitude greater than 3 within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Smoothing was done using a Gaussian filter in incremental intervals of magnitude. Seismicity parameters are calculated and smoothed for each region separately, and for comparison purposes, we also consider the combination of all the seismic zones as a uniform region. Seismic hazard curves are first obtained for two distinct models defined on two structural risk scenarios based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0, and then combined into a single one to account for the proportion of reinforced and unreinforced structures. The results are presented in terms of expected peak ground acceleration curves and hazard maps and considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions, and compared to equivalent estimations available in the literature at selected locations. Despite some localized differences \textcolor{red}{[???]}, we find our results to be in good agreement with previous results. Therefore, we find the method used here is appropriate to estimate seismic hazard for northern Iran. We conclude with an analysis of the results and its implications for the region, and highlight... or offer some additional thoughts about... \textcolor{red}{[Naeem: what would you say is the main conclusion or major finding?]}.
 
 % Naeem's original abstract
 
