working on introduction...

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,18 +1,22 @@
+
 \section{Introduction}
-Iran is situated over Himalayan-Alpide seismic belt, which has frequently experienced strong shaking induced by earthquakes. The occurrence of these earthquakes has imposed notable destruction to the buildings and lifelines, and unfortunately, has caused extensive loss of human life. These earthquakes are categorized in various tectonic seismic zones. Different tectonic seismic regions have been defined for Iran in different studies.  Some of these studies defined more detailed division \citep{Nowroozi1976, Tavakoli1999}, and some of them defined one simplified province \citep{Stocklin1968, Takin1972, Berberian1976}. \citet{Mirzaei1998} divided Iran into five tectonic regions, including Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran. Regarding the other tectonic seismic regions, \citet{Karimiparidari2013} divided the Azerbaijan-Alborz tectonic seismic region into two regions, which are Azerbaijan and Alborz Mountain Range (hereinafter, Alborz).\\
- Azerbaijan, Alborz and Kopeh-Dagh tectonic seismic regions encompass most of northern Iran. Northern Iran has many highly populated cities (e.g., Tehran, Tabriz, and Mashhad), in which many destructive earthquakes have been reported. \\
-\noindent
-In the last three decades, different seismic hazard analysis studies \citep[e.g.,][]{Tavakoli1999,Ghodrati2003} substantially improved the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}.
-\citet{Ghodrati2013} conducted a seismic risk assessment for the city of Tehran using the HAZUS method \citep{FEMA2003}. They represent that these efforts successfully decrease the total mean damage ratio in Tehran from 0.302739 in 1996 to 0.272859 in 2006.  Even though the results are satisfactory, the continuous improvement of procedures for defining the seismic hazard at regional (national) and local levels is essential for the optimum design of earthquake-resistant structures. In this study we use another model to overcome the aleatory and epistemic uncertainties regarding earthquake location and source mechanism in northern Iran.\\
 
-In this study we used smoothed seismicity approach \citep{Frankel1995} in order to do seismic hazard analysis. We divided northern Iran in three seismotectonic regions including Azerbaijan, Alborz, and Kopeh Dagh. We also consider seismicity of part of Central-East Iran and Zagros regions. We computed seismic parameters and catalog completeness in these regions. Zagros and Central Iran seismotectonic regions have considerable effect on the Northern part.   We consider the $Mw \  5$ earthquake as a threshold magnitude  for structural damage. In order to consider damage to the historical masonry building (which includes most part of big cities and rural areas) we also considered $Mw \  4.5$ as a threshold for structural damage to these kind of building. 
 
-\noindent
-Recently, northern Iran has been studied in detail from different seismological points of view. \citet{Nemati2015} studied the most recent 200 years' seismicity in northern Iran. The frequency of shocks vary widely from one mainshock per 6 years (0.17 event/ year) for the Azerbaijan region to 13 earthquakes per 4 years for the Kopeh-Dagh (3.25 event/year) region. Recorded events and a partially quiet period suggest that strong earthquakes must be expected in Alborz within the next decade, which may cause significant damage to northern Iran. Using newly recorded data, \citet{Zafarani2014} defined the most appropriate attenuation relationship for use in the Azerbaijan, Alborz and Kopeh-Dagh regions. In this study we use an updated catalog and the recently confirmed attenuation relationship for northern Iran \citep[i.e.,][]{Kalkan2004} in order to conduct seismic hazard analysis from background seismicity. We follow \citet{Frankel1995} approach to calculate hazard from background seismicity for northern Iran. This differs from the traditional approach in which area source zones are drawn around seismicity or tectonic provinces for the calculation of seismic hazard \citep{Cornell1968}. \\
-\noindent
-Having limited knowledge in seismic sources, \citet{Frankel1995} used this approach to map seismic hazards in central and eastern United States. The major features of Frankel's approach are to abandon tectonic seismic zones and to use point sources in seismic hazard analysis. This method is simpler for hazards calculation and is based solely on recorded seismicity history. In the smoothed-seismicity approach we avoid choosing zone boundaries that are sometimes poorly delineated by data and drawn by subjectively merging geological and seismological information. Even though probabilistic seismic hazard involving fault sources is more realistic and accurate, recognizing sources could present considerable uncertainty. \citet{Masson2006} studied 19 points of the GPS network that have been installed in the framework of French-Iranian cooperation. At some stations (e.g., the ATTA station) they expect to record significant movement, based on the region's historical activity.  Surprisingly, they recorded velocity of $0\  mm/yr$. \\
-\noindent
-The smoothed-seismicity method simply assumes that patterns of historical earthquakes predict future activity. We generate maps of peak ground acceleration with 2\% and 10\% probabilities in exceedance of 50 years in northern tectonic seismic zones, including Azerbaijan, Alborz, and Kopeh-Dagh and in central-eastern Iran and a small portion of the northern Zagros region. Since we do not introduce faults into the model, our results show variability due only to the characteristics of seismicity and ground motion. 
+
+% Naeem's original Introduction
+
+% Iran is situated over Himalayan-Alpide seismic belt, which has frequently experienced strong shaking induced by earthquakes. The occurrence of these earthquakes has imposed notable destruction to the buildings and lifelines, and unfortunately, has caused extensive loss of human life. These earthquakes are categorized in various tectonic seismic zones. Different tectonic seismic regions have been defined for Iran in different studies.  Some of these studies defined more detailed division \citep{Nowroozi1976, Tavakoli1999}, and some of them defined one simplified province \citep{Stocklin1968, Takin1972, Berberian1976}. \citet{Mirzaei1998} divided Iran into five tectonic regions, including Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran. Regarding the other tectonic seismic regions, \citet{Karimiparidari2013} divided the Azerbaijan-Alborz tectonic seismic region into two regions, which are Azerbaijan and Alborz Mountain Range (hereinafter, Alborz). Azerbaijan, Alborz and Kopeh-Dagh tectonic seismic regions encompass most of northern Iran. Northern Iran has many highly populated cities (e.g., Tehran, Tabriz, and Mashhad), in which many destructive earthquakes have been reported.
+
+
+% In the last three decades, different seismic hazard analysis studies \citep[e.g.,][]{Tavakoli1999,Ghodrati2003} substantially improved the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. \citet{Ghodrati2013} conducted a seismic risk assessment for the city of Tehran using the HAZUS method \citep{FEMA2003}. They represent that these efforts successfully decrease the total mean damage ratio in Tehran from 0.302739 in 1996 to 0.272859 in 2006.  Even though the results are satisfactory, the continuous improvement of procedures for defining the seismic hazard at regional (national) and local levels is essential for the optimum design of earthquake-resistant structures. In this study we use another model to overcome the aleatory and epistemic uncertainties regarding earthquake location and source mechanism in northern Iran.\\
+
+% In this study we used smoothed seismicity approach \citep{Frankel1995} in order to do seismic hazard analysis. We divided northern Iran in three seismotectonic regions including Azerbaijan, Alborz, and Kopeh Dagh. We also consider seismicity of part of Central-East Iran and Zagros regions. We computed seismic parameters and catalog completeness in these regions. Zagros and Central Iran seismotectonic regions have considerable effect on the Northern part.   We consider the $Mw \  5$ earthquake as a threshold magnitude  for structural damage. In order to consider damage to the historical masonry building (which includes most part of big cities and rural areas) we also considered $Mw \  4.5$ as a threshold for structural damage to these kind of building. 
+
+% Recently, northern Iran has been studied in detail from different seismological points of view. \citet{Nemati2015} studied the most recent 200 years' seismicity in northern Iran. The frequency of shocks vary widely from one mainshock per 6 years (0.17 event/ year) for the Azerbaijan region to 13 earthquakes per 4 years for the Kopeh-Dagh (3.25 event/year) region. Recorded events and a partially quiet period suggest that strong earthquakes must be expected in Alborz within the next decade, which may cause significant damage to northern Iran. Using newly recorded data, \citet{Zafarani2014} defined the most appropriate attenuation relationship for use in the Azerbaijan, Alborz and Kopeh-Dagh regions. In this study we use an updated catalog and the recently confirmed attenuation relationship for northern Iran \citep[i.e.,][]{Kalkan2004} in order to conduct seismic hazard analysis from background seismicity. We follow \citet{Frankel1995} approach to calculate hazard from background seismicity for northern Iran. This differs from the traditional approach in which area source zones are drawn around seismicity or tectonic provinces for the calculation of seismic hazard \citep{Cornell1968}.
+
+% Having limited knowledge in seismic sources, \citet{Frankel1995} used this approach to map seismic hazards in central and eastern United States. The major features of Frankel's approach are to abandon tectonic seismic zones and to use point sources in seismic hazard analysis. This method is simpler for hazards calculation and is based solely on recorded seismicity history. In the smoothed-seismicity approach we avoid choosing zone boundaries that are sometimes poorly delineated by data and drawn by subjectively merging geological and seismological information. Even though probabilistic seismic hazard involving fault sources is more realistic and accurate, recognizing sources could present considerable uncertainty. \citet{Masson2006} studied 19 points of the GPS network that have been installed in the framework of French-Iranian cooperation. At some stations (e.g., the ATTA station) they expect to record significant movement, based on the region's historical activity.  Surprisingly, they recorded velocity of $0\  mm/yr$.
+
+% The smoothed-seismicity method simply assumes that patterns of historical earthquakes predict future activity. We generate maps of peak ground acceleration with 2\% and 10\% probabilities in exceedance of 50 years in northern tectonic seismic zones, including Azerbaijan, Alborz, and Kopeh-Dagh and in central-eastern Iran and a small portion of the northern Zagros region. Since we do not introduce faults into the model, our results show variability due only to the characteristics of seismicity and ground motion. 
 
 
 
