making progress with the introduction

--- a/PSHA.bib
+++ b/PSHA.bib
@@ -169,6 +169,19 @@
   Timestamp                = {2016.01.23}
 }
 
+@InCollection{Berberian_1981_Chap,
+  Title                    = {Active Faulting and Tectonics of {I}ran},
+  Author                   = {Berberian, M},
+  Booktitle                = {Zagros Hindu Kush Himalaya Geodynamic Evolution},
+  Publisher                = {American Geophysical Union},
+  Year                     = {1981},
+
+  Address                  = {Washington, D. C.},
+  Editor                   = {Gupta, H. K. and  Delany, F. M.},
+
+  Doi                      = {10.1029/GD003p0033}
+}
+
 @Article{Berberian1997,
   Title                    = {Seismic sources of the {T}ranscaucasian historical earthquakes},
   Author                   = {Berberian, MANUEL},
@@ -488,6 +501,7 @@
   Number                   = {2},
   Pages                    = {567--577},
   Volume                   = {73},
+
   Owner                    = {naeem},
   Publisher                = {Springer},
   Timestamp                = {2016.01.23}
