--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,21 @@
 % 
-This article presents a seismic hazard assessment for northern Iran where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a recently introduced ground motion prediction equation \textcolor{red}{ (The attenuation relationship \citep{Kalkan2004} has been introduced in 2004 (Not recently). In 2014, \citet{Zafarani2014} evaluated many different attenuation relationship based on recently recorded data. They found \citet{Kalkan2004} has the best fit with data for PGA.)}. We evaluate the hazard over a geographical region including the three major seismic zones affecting the northern part of the country, namely Azerbaijan to the northwest \textcolor{red}{(I'm not sure "Azerbaijan to the northwest" is correct. Because the whole area is Azerbaijan.)}, the Alborz Mountain Range in the northern-central region of Iran, and Kopeh-Dagh to the northeast \textcolor{red}{(Please see the comment on Azerbaijan)}. For completeness, we also consider the partial contribution of the two remaining seismic zones to the south, that is, Zagros to the southwest, and the south-central and southeastern Iranian seismic zone. Following the concepts of smoothed seismicity, events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree in both the latitude and longitude directions. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events with magnitude greater than 3 \textcolor{red}{(We used earthquake with magnitude 3 and greater only after 2000, before that data are greater than 4.)} within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Smoothing was done using a Gaussian filter in incremental intervals of magnitude. Seismicity parameters are calculated and smoothed for each region separately, and for comparison purposes, we also consider the combination of all the seismic zones as a uniform region. Seismic hazard curves are first obtained for two distinct models defined on two structural risk scenarios based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0, and then combined into a single one to account for the proportion of reinforced and unreinforced structures. The results are presented in terms of expected peak ground acceleration curves and hazard maps and considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions, and compared to equivalent estimations available in the literature at selected locations. Despite some localized differences \textcolor{red}{[???]}, we find our results to be in good agreement with previous results \textcolor{red}{(We may need to write the conclusion from other point of view. The method, attenuation relationship, and  even data (some sort of) are different from other studies. So we expect to see different results. Not only we expect but at some point we should see some differences because of the method. There are some places that we don't have any recorded earthquake or they are not  as much to increase the hazard. In this study for those places we get lower hazard, but in studies based on recognizing faults as a source, they ends up with higher hazard. I think we can say that even though the other studies are good, but they are not complete and we need to use this method alongside them.)}. Therefore, we find the method used here is appropriate to estimate seismic hazard for northern Iran. We conclude with an analysis of the results and its implications for the region, and highlight... or offer some additional thoughts about... \textcolor{red}{[Naeem: what would you say is the main conclusion or major finding?]}.
+This article presents a seismic hazard assessment for northern Iran where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield the best fit with data. We evaluate the hazard over a geographical region including the three major seismic zones affecting the northern part of the country, namely Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh. For completeness, we also consider the partial contribution of the two remaining seismic zones to the south, that is, Zagros to the southwest, and the south-central and southeastern Iranian seismic zones. Following the concepts of smoothed seismicity, events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both the latitude and longitude directions. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Smoothing was done using a Gaussian filter in incremental intervals of magnitude. Seismicity parameters are calculated and smoothed for each region separately, and for comparison purposes, we also consider the combination of all the seismic zones as a uniform region. Seismic hazard curves obtained for two distinct models defined according to two structural risk scenarios. These scenarios are based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 for unreinforced and informal construction, and greater than 5.0 for modern structures following design regulations. We also present results for a combined scenario based on the proportion of reinforced and unreinforced structures. The results are presented in terms of expected peak ground acceleration curves and hazard maps, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We compare our results to equivalent estimations available in the literature at selected locations and offer our perspective on the difference observed due to the intrinsic differences in the methods employed here in light of results obtained by other previous studies. In conclusion, we find our results to be helpful in understanding seismic hazard for norther Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain a more robust estimates at specific areas of interest.
+
+% -------------------------
+
+% Naeem's comment about differences with previous studies...
+
+% We may need to write the conclusion from other point of view. The method, attenuation relationship, and even data (some sort of) are different from other studies. So we expect to see different results. Not only we expect but at some point we should see some differences because of the method. There are some places that we don't have any recorded earthquake or they are not  as much to increase the hazard. In this study for those places we get lower hazard, but in studies based on recognizing faults as a source, they ends up with higher hazard. I think we can say that even though the other studies are good, but they are not complete and we need to use this method alongside them.
+
+% Naeem's comment about GMPE...
+
+% The attenuation relationship \citep{Kalkan2004} has been introduced in 2004 (Not recently). In 2014, \citet{Zafarani2014} evaluated many different attenuation relationship based on recently recorded data. They found \citet{Kalkan2004} has the best fit with data for PGA.
+
+% Naeem's info about magnitude selection...
+
+% We used earthquake with magnitude 3 and greater only after 2000, before that data are greater than 4.
+
+% -------------------------
 
 % Naeem's original abstract
 
