--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,21 @@
 
 \section{Introduction}
 
+This article presents a new seismic hazard assessment for northern portion of the Iranian plateau, using a smoothed seismicity approach in combination with an updated seismic catalog and a ground motion prediction equation recently evaluated and found to be the most reliable attenuation relationship to predict peak ground response in the region. The Iranian plateau is located on the Himalayan-Alpine seismic belt. It is confined between the convergent movements of the Arabian and Eurasian plates, and laterally trapped between the Arabian and eastern Asia-Minor to the west, and the Indian and Eurasian plates to the east. This entrapment lifts the plateau and gives rise to the three major mountain ranges delimiting Iran's land, the Zagros mountain ranges running from the southeast to the northwest, the Alborz ranges to the north, and the east Iranian ranges \citep[e.g.,][]{Berberian_1981_Chap}. It also defines the seismic activity of the region, one with a long history of large magnitude ($M>7$) earthquakes dating back to the eight century, which has repeatedly damage Iran's infrastructure and taken the lives of thousands. 
+
+According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the more elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted studies divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic basic seismic zones and focus our attention on those most relevant to the northern part of the country, that is, Azerbaijan, Alborz and Kopeh-Dagh.
+
+Over the last three decades there have been multiple efforts to better estimate the seismic hazard and assess seismic risk in Iran \citep[e.g.,][]{Tavakoli1999} [\textcolor{red}{Add at least two more references here}]. These studies have been, in part, intended to help improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}}. While such improvements in design practice are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran, other indicators suggest that seismic risk in high and therefore more complete and accurate assessments of seismic hazard are necessary. 
+
+We are particularly interested in the assessment of seismic hazard in northern Iran. This region has a significant population density with respect to the rest of the country, and includes some of its most populated cities: Tehran, Mashhad, Tabriz, Karaj, Qom, Orumieh, and Rasht. These cities alone house about 31.5 million people. They represent nearly 40 percent of the total population of Iran and a good portion of its economic activity. In this study we ...
+
+
+In this study we use another model to overcome the aleatory and epistemic uncertainties regarding earthquake location and source mechanism in northern Iran.\\
+
+
+
+
+
 
 
 % Naeem's original Introduction
