making progress with the introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -5,7 +5,7 @@ This article presents a new seismic hazard assessment for northern portion of th
 
 According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the more elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted studies divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic basic seismic zones and focus our attention on those most relevant to the northern part of the country, that is, Azerbaijan, Alborz and Kopeh-Dagh.
 
-Over the last three decades there have been multiple efforts to better estimate the seismic hazard and assess seismic risk in Iran \citep[e.g.,][]{Tavakoli1999} [\textcolor{red}{Add at least two more references here}]. These studies have been, in part, intended to help improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}}. While such improvements in design practice are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran, other indicators suggest that seismic risk in high and therefore more complete and accurate assessments of seismic hazard are necessary. 
+Over the last three decades there have been multiple efforts to better estimate the seismic hazard and assess seismic risk in Iran \citep[e.g.,][]{Tavakoli1999} [\textcolor{red}{Add at least two more references here}]. These studies have been, in part, intended to help improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. While such improvements in design practice are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran, other indicators suggest that seismic risk is high and therefore more complete and accurate assessments of seismic hazard are necessary. 
 
 We are particularly interested in the assessment of seismic hazard in northern Iran. This region has a significant population density with respect to the rest of the country, and includes some of its most populated cities: Tehran, Mashhad, Tabriz, Karaj, Qom, Orumieh, and Rasht. These cities alone house about 31.5 million people. They represent nearly 40 percent of the total population of Iran and a good portion of its economic activity. In this study we ...
 
