--- a/introduction.tex
+++ b/introduction.tex
@@ -7,82 +7,43 @@ According to this tectonic setting and the geologic provinces of the plateau, Ir
 
 Over the last three decades there have been multiple efforts to better estimate the seismic hazard and assess seismic risk in Iran \citep[e.g.,][]{Tavakoli1999} [\textcolor{red}{Add at least two more references here}]. These studies have been, in part, intended to help improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. While improvements in design practice are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran, other indicators suggest high levels of seismic and therefore more complete and accurate assessments of seismic hazard, that incorporate the latest available data and alternative methods, are necessary.
 
-In this article, we are particularly interested in the assessment of the seismic hazard of northern Iran. This region houses nearly 40 percent (31.5 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Orumieh, and Rasht; and has suffered the devastating effects of earthquakes in the past (e.g., \textcolor{red}{two references}). Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard in the region \citep[e.g.,][]{Ghodrati2011, Abdollahzadeh2014a, Boostan2015} \textcolor{red}{[Are these good references? we need them to be about northern Iran. Any other?]}. In general, these studies highlight the significant seismic hazard of the region, and... \textcolor{red}{[need punch line conclusions here]}. However useful, most previous studies focus on particular locations (e.g., Tehran) or are based on the categorization of seismogenic faults, which are often subjectively interpreted and limited to the availability data. Here, we use the smoothed seismicity method introduced by \citep{Frankel1995}. This approach to map seismic hazard has been used with success in other regions (\textcolor{red}{[two references needed here]}). Its major feature is the treatment of recorded and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that probabilistic seismic hazard analysis based on fault systems can be more realistic and accurate, by choosing the smoothed seismicity method we seek to reduce the uncertainty associated with fault mapping and 
+In this article, we are particularly interested in the assessment of the seismic hazard of northern Iran. This region houses nearly 40 percent (31.5 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Orumieh, and Rasht; and has suffered the devastating effects of earthquakes in the past (e.g., \textcolor{red}{two references}). Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard in the region \citep[e.g.,][]{Ghodrati2011, Abdollahzadeh2014a, Boostan2015} \textcolor{red}{[Are these good references? we need them to be about northern Iran. Any other?]}. In general, these studies highlight the significant seismic hazard of the region, and... \textcolor{red}{[need punch line conclusions here]}. 
+
+However useful, most previous studies focus on particular locations or are based on specific categorization of seismogenic faults, which are often subjectively interpreted and limited to the availability data. Here, we use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions (\textcolor{red}{[two references needed here]}). Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that probabilistic seismic hazard analysis based on fault systems can be more realistic and accurate, by choosing the smoothed seismicity method we seek to reduce the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh; but for completeness, we also consider the partial contribution of the areas of Zagros and the central-east seismic zones within our domain of interest (see Figure \ref{fig:Iran}). In addition, for comparison purposes, we obtain results for the the combination of all seismic zones as a uniform region.
+
+In the following sections we describe in greater detail our region of interest, review the associated tectonics and seismicity, and provide additional information about the approach followed to estimate seismic hazard for the region. Significant aspects of our work include the composition of the earthquake catalog, including catalog completeness, the conversion of earthquake magnitudes, the selection of an appropriate attenuation relationship for the region \citep{Zafarani2014, Kalkan2004}, and the estimation of the Gutenberg-Richter seismicity parameters, which are necessary for the smoothed seismicity method. Our analysis includes seismic hazard curves and maps for peak ground acceleration considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We consider two hazard models based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ 4.5 and 5.0 for unreinforced and reinforced structures, respectively; and later combine these results into a single analysis based on the composition of the structural building inventory of the country. We compare our results to equivalent estimations (hazard curves) available in the literature for selected locations and conclude with a discussion in light of other previous hazard studies.
 
 
-The method is solely based on cataloged 
-
-features of Frankel's approach are to abandon tectonic seismic zones and to use point sources in seismic hazard analysis. This method is simpler for hazards calculation and is based solely on recorded seismicity history. In the smoothed-seismicity approach we avoid choosing zone boundaries that are sometimes poorly delineated by data and drawn by subjectively merging geological and seismological information. 
-
-
-% To assess the seismic hazard for this region, we use the smoothed seismicity method introduced by \citep{Frankel1995}. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh; but for completeness, we also consider the partial contribution of the areas of Zagros and the central-east seismic zones within our domain of interest (see Figure \ref{fig:Iran}).
-
-% Having limited knowledge in seismic sources, \citet{Frankel1995} used this approach to map seismic hazards in central and eastern United States. The major features of Frankel's approach are to abandon tectonic seismic zones and to use point sources in seismic hazard analysis. This method is simpler for hazards calculation and is based solely on recorded seismicity history. In the smoothed-seismicity approach we avoid choosing zone boundaries that are sometimes poorly delineated by data and drawn by subjectively merging geological and seismological information. Even though probabilistic seismic hazard involving fault sources is more realistic and accurate, recognizing sources could present considerable uncertainty. \citet{Masson2006} studied 19 points of the GPS network that have been installed in the framework of French-Iranian cooperation. At some stations (e.g., the ATTA station) they expect to record significant movement, based on the region's historical activity.  Surprisingly, they recorded velocity of $0\  mm/yr$.
+% *********************************************************************************************************************
+% *********************************************************************************************************************
 
 
+% Pieces of text in original introduction that could or should be used later
+% --------------------------------------------------------------------------
+
+% \citet{Ghodrati2013} conducted a seismic risk assessment for the city of Tehran using the HAZUS method \citep{FEMA2003}. They represent that these efforts successfully decrease the total mean damage ratio in Tehran from 0.302739 in 1996 to 0.272859 in 2006.
+
+% Having limited knowledge in seismic sources, \citet{Frankel1995} used this approach to map seismic hazards in central and eastern United States. The major features of Frankel's approach are to abandon tectonic seismic zones and to use point sources in seismic hazard analysis. This method is simpler for hazards calculation and is based solely on recorded seismicity history. In the smoothed-seismicity approach we avoid choosing zone boundaries that are sometimes poorly delineated by data and drawn by subjectively merging geological and seismological information. \citet{Masson2006} studied 19 points of the GPS network that have been installed in the framework of French-Iranian cooperation. At some stations (e.g., the ATTA station) they expect to record significant movement, based on the region's historical activity.  Surprisingly, they recorded velocity of $0\  mm/yr$.
+
+% An important aspect of seismic hazard is the proper definition of attenuation parameters. In a recent effort, \citet{Zafarani2014} reviewed multiple ground motion prediction equations available in the literature and concluded that the most appropriate attenuation relationship to be used in northern Iran was \citet{Kallan2004}
+
+% \citet{Nemati2015} studied the most recent 200 years' seismicity in northern Iran. The frequency of shocks vary widely from one mainshock per 6 years (0.17 event/ year) for the Azerbaijan region to 13 earthquakes per 4 years for the Kopeh-Dagh (3.25 event/year) region. Recorded events and a partially quiet period suggest that strong earthquakes must be expected in Alborz within the next decade, which may cause significant damage to northern Iran.
+
+% In this study we use an updated catalog and the recently confirmed attenuation relationship for northern Iran \citep[i.e.,][]{Kalkan2004} in order to conduct seismic hazard analysis from background seismicity. We follow \citet{Frankel1995} approach to calculate hazard from background seismicity for northern Iran. This differs from the traditional approach in which area source zones are drawn around seismicity or tectonic provinces for the calculation of seismic hazard \citep{Cornell1968}.
+
+% Using newly recorded data, \citet{Zafarani2014} defined the most appropriate attenuation relationship for use in the Azerbaijan, Alborz and Kopeh-Dagh regions. In this study we use an updated catalog and the recently confirmed attenuation relationship for northern Iran \citep[i.e.,][]{Kalkan2004} in order to conduct seismic hazard analysis from background seismicity. We follow \citet{Frankel1995} approach to calculate hazard from background seismicity for northern Iran. This differs from the traditional approach in which area source zones are drawn around seismicity or tectonic provinces for the calculation of seismic hazard \citep{Cornell1968}.
+
+% We computed seismic parameters and catalog completeness in these regions. Zagros and Central Iran seismotectonic regions have considerable effect on the Northern part. In order to consider damage to the historical masonry building (which includes most part of big cities and rural areas) we also considered $M_w$ 4.5 as a threshold for structural damage. 
+
+% The smoothed-seismicity method simply assumes that patterns of historical earthquakes predict future activity. Since we do not introduce faults into the model, our results show variability due only to the characteristics of seismicity and ground motion.
 
 
-
-
-An important aspect of seismic hazard is the proper definition of attenuation parameters. In a recent effort, \citet{Zafarani2014} reviewed multiple available ground motion prediction equations available in the literature and concluded that the most appropriate attenuation relationship to be used in northern Iran, int he Alborz and Kopeh-Dagh regions, was
-
-
-
-
-
-
-% \citet{Nemati2015} studied the most recent 200 years' seismicity in northern Iran. The frequency of shocks vary widely from one mainshock per 6 years (0.17 event/ year) for the Azerbaijan region to 13 earthquakes per 4 years for the Kopeh-Dagh (3.25 event/year) region.
-
-
-
-
-
-\citet{Nemati2015} studied the most recent 200 years' seismicity in northern Iran. The frequency of shocks vary widely from one mainshock per 6 years (0.17 event/ year) for the Azerbaijan region to 13 earthquakes per 4 years for the Kopeh-Dagh (3.25 event/year) region. Recorded events and a partially quiet period suggest that strong earthquakes must be expected in Alborz within the next decade, which may cause significant damage to northern Iran.
-
-which may cause significant damage to northern Iran. Using newly recorded data, \citet{Zafarani2014} defined the most appropriate attenuation relationship for use in the Azerbaijan, Alborz and Kopeh-Dagh regions. In this study we use an updated catalog and the recently confirmed attenuation relationship for northern Iran \citep[i.e.,][]{Kalkan2004} in order to conduct seismic hazard analysis from background seismicity. We follow \citet{Frankel1995} approach to calculate hazard from background seismicity for northern Iran. This differs from the traditional approach in which area source zones are drawn around seismicity or tectonic provinces for the calculation of seismic hazard \citep{Cornell1968}.
-
-has a significant population density 
-
-
-with respect to the rest of the country, and includes some of its most populated cities: . Not accounting for rural areas, 
-
-these cities house about 31.5 million people, which represents nearly 40 percent of the total population of Iran. 
-
-
-
-
-
-
-
-
-Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh. For completeness, we also consider the partial contribution of the two remaining seismic zones to the south, that is, Zagros to the southwest, and the south-central and southeastern Iranian seismic zones.
-
-
-we used smoothed seismicity approach \citep{Frankel1995} in order to do seismic hazard analysis. We divided northern Iran in three seismotectonic regions including Azerbaijan, Alborz, and Kopeh Dagh. We also consider seismicity of part of Central-East Iran and Zagros regions. We computed seismic parameters and catalog completeness in these regions. Zagros and Central Iran seismotectonic regions have considerable effect on the Northern part.  We consider the $Mw \  5$ earthquake as a threshold magnitude  for structural damage. In order to consider damage to the historical masonry building (which includes most part of big cities and rural areas) we also considered $Mw \  4.5$ as a threshold for structural damage to these kind of building. 
-
-
-
-
-
+% *********************************************************************************************************************
+% *********************************************************************************************************************
 
 
 % Naeem's original Introduction
-
-% in which many destructive earthquakes have been reported.
-
-% continuous improvement of procedures for defining the seismic hazard at regional (national) and local levels is essential for the optimum design of earthquake-resistant structures. In this study we use another model to overcome the aleatory and epistemic uncertainties regarding earthquake location and source mechanism in northern Iran.\\
-
-% In this study we used smoothed seismicity approach \citep{Frankel1995} in order to do seismic hazard analysis. We divided northern Iran in three seismotectonic regions including Azerbaijan, Alborz, and Kopeh Dagh. We also consider seismicity of part of Central-East Iran and Zagros regions. We computed seismic parameters and catalog completeness in these regions. Zagros and Central Iran seismotectonic regions have considerable effect on the Northern part.   We consider the $Mw \  5$ earthquake as a threshold magnitude  for structural damage. In order to consider damage to the historical masonry building (which includes most part of big cities and rural areas) we also considered $Mw \  4.5$ as a threshold for structural damage to these kind of building. 
-
-% Recently, northern Iran has been studied in detail from different seismological points of view. \citet{Nemati2015} studied the most recent 200 years' seismicity in northern Iran. The frequency of shocks vary widely from one mainshock per 6 years (0.17 event/ year) for the Azerbaijan region to 13 earthquakes per 4 years for the Kopeh-Dagh (3.25 event/year) region. Recorded events and a partially quiet period suggest that strong earthquakes must be expected in Alborz within the next decade, which may cause significant damage to northern Iran. Using newly recorded data, \citet{Zafarani2014} defined the most appropriate attenuation relationship for use in the Azerbaijan, Alborz and Kopeh-Dagh regions. In this study we use an updated catalog and the recently confirmed attenuation relationship for northern Iran \citep[i.e.,][]{Kalkan2004} in order to conduct seismic hazard analysis from background seismicity. We follow \citet{Frankel1995} approach to calculate hazard from background seismicity for northern Iran. This differs from the traditional approach in which area source zones are drawn around seismicity or tectonic provinces for the calculation of seismic hazard \citep{Cornell1968}.
-
-% Having limited knowledge in seismic sources, \citet{Frankel1995} used this approach to map seismic hazards in central and eastern United States. The major features of Frankel's approach are to abandon tectonic seismic zones and to use point sources in seismic hazard analysis. This method is simpler for hazards calculation and is based solely on recorded seismicity history. In the smoothed-seismicity approach we avoid choosing zone boundaries that are sometimes poorly delineated by data and drawn by subjectively merging geological and seismological information. Even though probabilistic seismic hazard involving fault sources is more realistic and accurate, recognizing sources could present considerable uncertainty. \citet{Masson2006} studied 19 points of the GPS network that have been installed in the framework of French-Iranian cooperation. At some stations (e.g., the ATTA station) they expect to record significant movement, based on the region's historical activity.  Surprisingly, they recorded velocity of $0\  mm/yr$.
-
-% The smoothed-seismicity method simply assumes that patterns of historical earthquakes predict future activity. We generate maps of peak ground acceleration with 2\% and 10\% probabilities in exceedance of 50 years in northern tectonic seismic zones, including Azerbaijan, Alborz, and Kopeh-Dagh and in central-eastern Iran and a small portion of the northern Zagros region. Since we do not introduce faults into the model, our results show variability due only to the characteristics of seismicity and ground motion. 
-
-
-
-% Naeem's original Introduction
+% -----------------------------
 
 % Iran is situated over Himalayan-Alpide seismic belt, which has frequently experienced strong shaking induced by earthquakes. The occurrence of these earthquakes has imposed notable destruction to the buildings and lifelines, and unfortunately, has caused extensive loss of human life. These earthquakes are categorized in various tectonic seismic zones. Different tectonic seismic regions have been defined for Iran in different studies.  Some of these studies defined more detailed division \citep{Nowroozi1976, Tavakoli1999}, and some of them defined one simplified province \citep{Stocklin1968, Takin1972, Berberian1976}. \citet{Mirzaei1998} divided Iran into five tectonic regions, including Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran. Regarding the other tectonic seismic regions, \citet{Karimiparidari2013} divided the Azerbaijan-Alborz tectonic seismic region into two regions, which are Azerbaijan and Alborz Mountain Range (hereinafter, Alborz). Azerbaijan, Alborz and Kopeh-Dagh tectonic seismic regions encompass most of northern Iran. Northern Iran has many highly populated cities (e.g., Tehran, Tabriz, and Mashhad), in which many destructive earthquakes have been reported.
 
